<resources>
    <string name="app_name" translatable="false">SychyovMD</string>
    <string name="author_email" translatable="false">gost402@gmail.com</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="placeholder" translatable="false">Placeholder</string>

    <string name="launcher_theme_dark_key" translatable="false">LAUNCHER_THEME_DARK</string>
    <string name="launcher_layout_dense_key" translatable="false">LAUNCHER_LAYOUT_DENSE</string>
    <string name="launcher_sorting_type_key" translatable="false">LAUNCHER_SORTING_TYPE</string>
    <string name="launcher_not_initialized_key" translatable="false">LAUNCHER_NOT_INITIALIZED</string>

    <string name="preference_sorting_type_default_key" translatable="false">Default</string>
    <string name="preference_sorting_type_by_date_key" translatable="false">Date</string>
    <string name="preference_sorting_type_by_name_asc_key" translatable="false">NameAsc</string>
    <string name="preference_sorting_type_by_name_desc_key" translatable="false">NameDesc</string>
    <string name="preference_sorting_type_by_frequency_key" translatable="false">Popularity</string>

    <string name="preference_background_source_yandex_key" translatable="false">Yandex</string>
    <string name="preference_background_source_picsum_key" translatable="false">Lorem Picsum</string>
    <string name="preference_background_source_flickr_key" translatable="false">Lorem Flickr</string>
    <string name="preference_background_source_catapi_key" translatable="false">The Cat Api</string>
    <string name="preference_background_source_unsplash_key" translatable="false">Unsplash</string>

    <string name="author_name">Сычев Денис</string>
    <string name="next">Далее</string>
    <string name="welcome_message">Добро пожаловать</string>
    <string name="app_description">Легковесный лаунчер</string>
    <string name="light_theme_radiobutton">Светлая тема</string>
    <string name="dark_theme_radiobutton">Темная тема</string>
    <string name="standard_layout">Стандартный макет</string>
    <string name="standard_layout_description">Портретная: 4 иконки в ряд\nЛандшафтная: 6 иконки в ряд</string>
    <string name="dense_layout">Плотный макет</string>
    <string name="dense_layout_description">Портретная: 5 иконки в ряд\nЛандшафтная: 7 иконки в ряд</string>
    <string name="grid">Сетка</string>
    <string name="list">Список</string>
    <string name="settings">Настройки</string>
    <string name="app_delete">Удалить</string>
    <string name="app_frequency">Частота</string>
    <string name="app_info">Информация</string>
    <string name="preference_sort_type">Сортировка</string>
    <string name="preference_dense_layout">Плотная сетка</string>
    <string name="preference_dark_theme">Темная тема</string>
    <string name="preference_show_welcome_on_next_start">Показать приветствие при следующем старте</string>
    <string name="preference_sort_default">Без сортировки</string>
    <string name="preference_sort_by_created_at">По дате установки</string>
    <string name="preference_sort_by_name_asc">По имени (возр.)</string>
    <string name="preference_sort_by_name_desc">По имени (убыв.)</string>
    <string name="preference_sort_by_frequency">По популярности</string>
    <string name="description_package_name">Пакет</string>
    <string name="description_created_at">Создан</string>
    <string name="profile_author">Автор</string>
    <string name="profile_phone">Телефон</string>
    <string name="profile_email" translatable="false">Email</string>
    <string name="profile_vk" translatable="false">VK</string>
    <string name="profile_facebook" translatable="false">Facebook</string>
    <string name="profile_steam" translatable="false">Steam</string>
    <string name="profile_github" translatable="false">Github</string>

    <string name="desktop">Рабочий стол</string>
    <string name="app_add_desktop">Добавить на стол</string>
    <string name="desktop_app_delete">Удалить</string>
    <string name="desktop_app_move">Передвинуть</string>
    <string name="desktop_app_name">Название</string>
    <string name="add_contact_button">Добавить</string>
    <string name="cancel_add_contact_button">Отмена</string>
    <string name="add_contact_title">Добавить URL</string>
    <string name="desktop_app_url" translatable="false">URL</string>
    <string name="invalid_url">Неправильный URL</string>
    <string name="desktop_app_add_icon">Задать иконку</string>
    <string name="https" translatable="false">https://</string>
    <string name="preference_reload_background">Частота обновление рабочего стола</string>
    <string name="launcher_reload_background_key" translatable="false">LAUNCHER_RELOAD_BACKGROUND</string>
    <string name="reload_now">Обновить рабочий стол сейчас</string>
    <string name="preference_background_sources_key" translatable="false">PREFERENCE_BACKROUND_RESOURCE_KEY</string>
    <string name="preference_source_background">Источник рабочего стола</string>
    <string name="invalid_name">Неправильное имя</string>
    <string name="show_secret_profile_item_key" translatable="false">SHOW_SECRET_PROFILE_ITEM</string>
    <string name="secret_playlist">Secret Playlist</string>
</resources>
