<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dsychyov.sychyovmd.ui.activities.WelcomeActivity"
    android:layout_margin="@dimen/welcome_page_margin"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_dots"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@drawable/tab_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/welcome_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/next_step"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/next_step"
        style="@style/AppTheme.NextButton"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tab_dots"
        android:text="@string/next" />
</RelativeLayout>
